2009-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/componentlist.py:
	  Fix/normalize docstrings.

2009-08-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/porter/porter.py:
	Fix initialisation of porter.

2009-08-26  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: xmartinez/jan 

	* flumotion/component/misc/httpserver/httpfile.py:
	avoid leaking of sockets in CLOSE_WAIT state
	solves #1327

2009-08-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Jan Urbanski

	* flumotion/component/misc/porter/porter.py:
	* flumotion/component/misc/porter/porter.xml:
	Add external-interface property for porter.

2009-08-25  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/twisted/integration.py:
	Use tempfile.mkdtemp instead when making testDirs. Fixes #1347.

2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	Start the new development series.

2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	Back to dev.

=== release 0.6.0 ===

2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	* flumotion.doap:
	Releasing 0.6.0 "Can Punyetes"

2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/gtk/dialogs.py:
	Update the list of authors.

2009-08-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/converters/overlay/overlay.py:
	Makes overlay work for > 0.10.23 gst-plugins-base.
	Fixes #1340

2009-08-20  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/muxers/checks.py:
	* flumotion/component/muxers/ogg.py:
	Add warnings about the oggmuxer bug in gst-plugins base 0.10.24

2009-08-20  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker.xml: